# austria_online_grocery_store

./: .gitignore  Cargo.toml  README.md  ddl.sql  docker-compose.dev.yml
src/: main.rs  utils.rs
src/stores/: billa.rs  mod.rs  spar.rs
